still have a small bug in the video duration, cropping works docs aren't updated yet

--- a/src/components/Timeline/Timeline.module.css
+++ b/src/components/Timeline/Timeline.module.css
@@ -1,6 +1,8 @@
 .timeline {
     cursor: pointer;
     width: 100%;
+    position: relative;
+    user-select: none;
 }
 
 .timelineWrapper {
